fix: refactor HTML structure and enhance CSS styles for better layout and readability

--- a/style.css
+++ b/style.css
@@ -19,23 +19,50 @@ main {
   padding: 2rem;
 }
 
-main>div {
+main > div {
   background: oklch(21% 0.006 285.885);
   padding: 1rem;
   margin-bottom: 1lh;
   border-radius: 20px;
+  display: grid;
+  grid-template-columns: 1fr auto;
 }
 
 h1 {
-  word-spacing: 1lvb;
-  letter-spacing: 0.5lvw;
-  font-size: 3rem;
+  line-height: 95%;
+  font-size: 4rem;
+  text-transform: uppercase;
   color: #f3f3f3;
 }
 
-h1>a {
+h1 > a {
   text-decoration: none;
   color: #f39e00;
+}
+
+main > div > div {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: calc(1rem + 20px);
+  color: oklch(21% 0.006 285.885);
+  padding: 1rem;
+  padding-bottom: 1.5rem;
+  background-color: #f3f3f3;
+}
+
+
+main > div > div > p {
+  font-size: 1.4rem;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+}
+
+.total {
+  line-height: 1;
+  font-weight: 700;
+  font-size: 10rem;
 }
 
 main ul {
@@ -50,12 +77,12 @@ ul > li {
   list-style: none;
   width: 300px;
   height: auto;
-  padding-bottom: 15px;
+  padding-bottom: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   background-color: oklch(21% 0.006 285.885);
-    border-radius: 1rem;
+  border-radius: 1rem;
   overflow: hidden;
 }
 
@@ -64,7 +91,7 @@ ul > li > img {
 }
 
 .tech,
-ul>li>h3 {
+ul > li > h3 {
   padding-inline: 1rem;
 }
 
@@ -111,7 +138,7 @@ ul > li > h3 {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
-    padding-inline: 1rem;
+  padding-inline: 1rem;
 }
 
 .link:first-child {
@@ -120,13 +147,13 @@ ul > li > h3 {
 
 .link span {
   display: inline-block;
-  background-color: #0ea5e9;
+  background-color: oklch(68.47% 0.14794 237.348);
   padding: 3px 10px;
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 700;
-  border-radius: 100px;
-  color: white;
+  border-radius: calc(1rem + 1rem);
+  color: oklch(33.364% 0.06934 236.221);
 }
 ul li a {
   text-decoration: none;
@@ -158,12 +185,13 @@ ul li a {
     font-size: 1.4rem;
   }
 }
+
 .image-container {
   position: relative;
   overflow: hidden;
   border-radius: 8px 8px 0 0;
   background: #2d3548;
-  min-height: 180px;
+  min-height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
